--- a/CEPARCO_IP.ipynb
+++ b/CEPARCO_IP.ipynb
@@ -348,71 +348,61 @@
     {
       "cell_type": "code",
       "source": [
-        "%%writefile CUDA.cu\n",
-        "\n",
+        "%%writefile C_hyyro.c\n",
         "#include <stdio.h>\n",
         "#include <stdlib.h>\n",
-        "#include <stdint.h>\n",
         "#include <string.h>\n",
-        "#include <cuda_runtime.h>\n",
+        "#include <stdint.h>\n",
+        "#include <time.h>\n",
         "\n",
-        "// Prefetch + page creation + memadvise\n",
         "#define MAX_LENGTH (1 << 24)\n",
-        "typedef uint64_t bitvector;\n",
-        "__constant__ bitvector d_Eq[256];\n",
         "\n",
-        "__host__ __device__ int bit_vector_levenshtein(int query_length, const char *reference, int reference_length, const bitvector *Eq) {\n",
-        "    if (query_length > MAX_LENGTH || reference_length > MAX_LENGTH) {\n",
+        "typedef uint64_t bitvector;\n",
+        "                                                                      // Added this\n",
+        "int bit_vector_levenshtein(const char *query, const char *reference, int *zero_indices, int *zero_count) {\n",
+        "    int m = strlen(query);\n",
+        "    int n = strlen(reference);\n",
+        "    if (m > MAX_LENGTH || n > MAX_LENGTH) {\n",
+        "        printf(\"Error: Strings too long for this implementation!\\n\");\n",
         "        return -1;\n",
         "    }\n",
         "\n",
         "    bitvector Pv = ~0ULL;\n",
         "    bitvector Mv = 0;\n",
-        "    bitvector Ph = 0;\n",
-        "    bitvector Mh = 0;\n",
-        "    bitvector Xv = 0;\n",
-        "    bitvector Xh = 0;\n",
-        "    bitvector Xp = 0;\n",
-        "    int score = query_length;\n",
+        "    bitvector Eq[256] = {0};\n",
+        "    bitvector Ph, Mh, Xv, Xh, Xp;\n",
         "\n",
-        "    for (int j = 0; j < reference_length; j++) {\n",
-        "        unsigned char c = reference[j];\n",
-        "        Xv = Eq[c] | Mv;\n",
+        "    for (int i = 0; i < m; i++) {\n",
+        "        Eq[(unsigned char)query[i]] |= (1ULL << i);\n",
+        "    }\n",
         "\n",
+        "    int score = m;\n",
+        "    *zero_count = 0;\n",
+        "\n",
+        "    for (int j = 0; j < n; j++) {\n",
+        "        Xv = Eq[(unsigned char)reference[j]] | Mv;\n",
         "        Xh = ((~Xh & Xv) << 1) & Xp;\n",
         "\n",
-        "        // Explicit parentheses for clarity\n",
-        "        Xh = Xh | ((((Xv & Pv) + Pv) ^ Pv) | Xv | Mv);\n",
-        "\n",
+        "        Xh = Xh | ((Xv & Pv) + Pv) ^ Pv | Xv | Mv;\n",
         "        Ph = Mv | ~(Xh | Pv);\n",
         "        Mh = Xh & Pv;\n",
         "        Xp = Xv;\n",
         "\n",
-        "        if (Ph & (1ULL << (query_length - 1))) score++;\n",
-        "        if (Mh & (1ULL << (query_length - 1))) score--;\n",
+        "        if (Ph & (1ULL << (m - 1))) score++;\n",
+        "        if (Mh & (1ULL << (m - 1))) score--;\n",
         "\n",
         "        Xv = (Ph << 1);\n",
         "        Pv = (Mh << 1) | ~(Xh | Xv);\n",
         "        Mv = Xh & Xv;\n",
         "\n",
-        "        // if (score == 0) break;\n",
+        "        if (score == 0) {\n",
+        "            zero_indices[*zero_count] = j;\n",
+        "            (*zero_count)++;\n",
+        "        }\n",
         "    }\n",
         "\n",
         "    return score;\n",
         "}\n",
-        "\n",
-        "__global__ void levenshtein_kernel(int query_length, const char *references, const int *reference_lengths, int *distances, int num_references) {\n",
-        "    int idx = blockIdx.x * blockDim.x + threadIdx.x;\n",
-        "    int stride = blockDim.x * gridDim.x;\n",
-        "\n",
-        "    for (int i = idx; i < num_references; i += stride) {\n",
-        "        const char *reference = &references[i * MAX_LENGTH];\n",
-        "        int reference_length = reference_lengths[i];\n",
-        "        // Use the constant memory table on the device.\n",
-        "        distances[i] = bit_vector_levenshtein(query_length, reference, reference_length, d_Eq);\n",
-        "    }\n",
-        "}\n",
-        "\n",
         "\n",
         "char* read_file_into_string(const char* filename) {\n",
         "    FILE* file = fopen(filename, \"r\");\n",
@@ -449,26 +439,17 @@
         "}\n",
         "\n",
         "\n",
-        "int main(){\n",
-        "    const char *query = \"tta\"; // Query DNA sequence\n",
-        "    int query_length = strlen(query);\n",
-        "    if (query_length > MAX_LENGTH) {\n",
-        "        printf(\"Query sequence too long!\\n\");\n",
-        "        return -1;\n",
-        "    }\n",
+        "int main() {\n",
+        "    const size_t loope = 10;\n",
+        "    clock_t start, end;\n",
+        "    double elapse = 0.0f;\n",
         "\n",
-        "    // Precompute Eq for the query and store it in host memory.\n",
-        "    bitvector h_Eq[256] = {0};\n",
-        "    for (int i = 0; i < query_length; i++) {\n",
-        "        h_Eq[(unsigned char)query[i]] |= (1ULL << i);\n",
-        "    }\n",
-        "\n",
-        "    // Copy Eq to constant memory on the device.\n",
-        "    cudaMemcpyToSymbol(d_Eq, h_Eq, sizeof(bitvector) * 256);\n",
-        "\n",
-        "    // Reference sequences to process\n",
-        "    const char* filenames[] = {\"GQ167802.1.txt\", \"input1.txt\"};\n",
+        "    const char *query = \"tta\";\n",
+        "        // Reference sequences to process\n",
+        "    const char* filenames[] = {\"GQ167802.1.txt\", \"input2.txt\"};\n",
         "    int num_references = sizeof(filenames) / sizeof(filenames[0]);\n",
+        "    double elapsed_times[num_references];\n",
+        "    int distances[num_references];\n",
         "\n",
         "    // Array to store the reference sequences\n",
         "    const char* references_input[num_references];\n",
@@ -479,88 +460,50 @@
         "        if (!references_input[i]) {\n",
         "            fprintf(stderr, \"Error reading file: %s\\n\", filenames[i]);\n",
         "\n",
-        "            // Free any previously allocated memory before exiting\n",
         "            for (int j = 0; j < i; j++) {\n",
         "                free((void*)references_input[j]);\n",
         "            }\n",
         "            return -1;\n",
         "        }\n",
+        "        reference_lengths[i] = strlen(references_input[i]);\n",
         "\n",
+        "        printf(\"Contents of file %s:\\n\", filenames[i]);\n",
+        "        printf(\"%s\\n\", references_input[i]);\n",
         "    }\n",
         "\n",
-        "    // Allocate Unified Memory\n",
-        "    char *references;\n",
-        "    int *d_reference_lengths, *d_distances;\n",
-        "    cudaMallocManaged(&references, num_references * MAX_LENGTH * sizeof(char));\n",
-        "    cudaMallocManaged(&d_reference_lengths, num_references * sizeof(int));\n",
-        "    cudaMallocManaged(&d_distances, num_references * sizeof(int));\n",
+        "    printf(\"Query: %s\\n\", query);\n",
         "\n",
-        "    // Copy references and lengths to managed memory\n",
         "    for (int i = 0; i < num_references; i++) {\n",
-        "        strncpy(&references[i * MAX_LENGTH], references_input[i], MAX_LENGTH);\n",
-        "        d_reference_lengths[i] = reference_lengths[i];\n",
-        "    }\n",
+        "        elapse = 0.0f;\n",
+        "        int distance = 0;\n",
         "\n",
-        "    // Get GPU device ID\n",
-        "    int device = -1;\n",
-        "    cudaGetDevice(&device);\n",
+        "        int first_zero_index = -1;    // ADDED THIS FOR FINDING OUT THE FIRST ZERO\n",
+        "        int *zero_indices = (int*)malloc(strlen(references_input[i]) * sizeof(int));\n",
+        "        int zero_count = 0;\n",
         "\n",
-        "    // Memory advise\n",
-        "    cudaMemAdvise(references, num_references * MAX_LENGTH * sizeof(char), cudaMemAdviseSetReadMostly, device);\n",
-        "    cudaMemAdvise(d_reference_lengths, num_references * sizeof(int), cudaMemAdviseSetReadMostly, device);\n",
-        "    cudaMemAdvise(d_distances, num_references * sizeof(int), cudaMemAdviseSetPreferredLocation, device);\n",
-        "\n",
-        "    // Prefetch data\n",
-        "    cudaMemPrefetchAsync(references, num_references * MAX_LENGTH * sizeof(char), device, NULL);\n",
-        "    cudaMemPrefetchAsync(d_reference_lengths, num_references * sizeof(int), device, NULL);\n",
-        "    cudaMemPrefetchAsync(d_distances, num_references * sizeof(int), device, NULL);\n",
-        "\n",
-        "    // Kernel parameters\n",
-        "    int threadsPerBlock = 256;\n",
-        "    int blocksPerGrid = (num_references + threadsPerBlock - 1) / threadsPerBlock;\n",
-        "\n",
-        "    // Number of times the program is executed\n",
-        "    const size_t loope = 10;\n",
-        "\n",
-        "    printf(\"*** function = Levenshtein Distance\\n\");\n",
-        "    printf(\"numReferences = %d\\n\", num_references);\n",
-        "    printf(\"numBlocks = %d, numThreads = %d\\n\", blocksPerGrid, threadsPerBlock);\n",
-        "\n",
-        "    // Execute kernel multiple times\n",
-        "    for (size_t i = 0; i < loope; i++) {\n",
-        "        levenshtein_kernel<<<blocksPerGrid, threadsPerBlock>>>(query_length, references, d_reference_lengths, d_distances, num_references);\n",
-        "    }\n",
-        "\n",
-        "    // Synchronize device\n",
-        "    cudaDeviceSynchronize();\n",
-        "\n",
-        "    // Prefetch distances back to CPU\n",
-        "    cudaMemPrefetchAsync(d_distances, num_references * sizeof(int), cudaCpuDeviceId, NULL);\n",
-        "    cudaDeviceSynchronize();\n",
-        "\n",
-        "    // Error checking: compute expected distance on host using the host copy of Eq (h_Eq).\n",
-        "    size_t err_count = 0;\n",
-        "    for (int i = 0; i < num_references; i++) {\n",
-        "        int expected_distance = bit_vector_levenshtein(query_length, references_input[i], reference_lengths[i], h_Eq);\n",
-        "        if (d_distances[i] != expected_distance) {\n",
-        "            err_count++;\n",
+        "        for (int j = 0; j < loope; j++) {\n",
+        "            start = clock();\n",
+        "            distance = bit_vector_levenshtein(query, references_input[i], zero_indices, &zero_count);\n",
+        "            end = clock();\n",
+        "            elapse += ((double)(end - start)) * 1E3 / CLOCKS_PER_SEC;\n",
         "        }\n",
-        "    }\n",
-        "    printf(\"Error count (CUDA program): %zu\\n\", err_count);\n",
         "\n",
-        "    // Print results\n",
-        "    for (int i = 0; i < num_references; i++) {\n",
-        "        printf(\"Edit Distance between query \\\"%s\\\" and reference \\\"%s\\\" is: %d\\n\", query, references_input[i], d_distances[i]);\n",
-        "    }\n",
+        "        elapsed_times[i] = elapse / loope;\n",
+        "        distances[i] = distance;\n",
         "\n",
-        "    // Free memory\n",
-        "    cudaFree(references);\n",
-        "    cudaFree(d_reference_lengths);\n",
-        "    cudaFree(d_distances);\n",
+        "        printf(\"File: %s, Distance: %d, Hits: %d, Zero Indices: \", filenames[i], distances[i], zero_count);\n",
+        "        for (int k = 0; k < zero_count; k++) {\n",
+        "            printf(\"%d \", zero_indices[k]);\n",
+        "        }\n",
+        "        printf(\"\\nAverage time: %f milliseconds\\n\", elapsed_times[i]);\n",
+        "\n",
+        "        free(zero_indices);\n",
+        "    }\n",
         "\n",
         "    for (int i = 0; i < num_references; i++) {\n",
         "        free((void*)references_input[i]);\n",
         "    }\n",
+        "\n",
         "\n",
         "    return 0;\n",
         "}\n"
