--- a/CEPARCO_IP.ipynb
+++ b/CEPARCO_IP.ipynb
@@ -55,10 +55,10 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 1,
       "metadata": {
         "id": "FMQ6IHLDh37V",
-        "outputId": "15df1579-1f06-41b4-db20-df7b3ff74574",
+        "outputId": "a2d6920e-84de-4891-99bf-338411148a70",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -68,26 +68,7 @@
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Sun Mar 16 06:54:21 2025       \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| NVIDIA-SMI 550.54.15              Driver Version: 550.54.15      CUDA Version: 12.4     |\n",
-            "|-----------------------------------------+------------------------+----------------------+\n",
-            "| GPU  Name                 Persistence-M | Bus-Id          Disp.A | Volatile Uncorr. ECC |\n",
-            "| Fan  Temp   Perf          Pwr:Usage/Cap |           Memory-Usage | GPU-Util  Compute M. |\n",
-            "|                                         |                        |               MIG M. |\n",
-            "|=========================================+========================+======================|\n",
-            "|   0  Tesla T4                       Off |   00000000:00:04.0 Off |                    0 |\n",
-            "| N/A   35C    P8              9W /   70W |       0MiB /  15360MiB |      0%      Default |\n",
-            "|                                         |                        |                  N/A |\n",
-            "+-----------------------------------------+------------------------+----------------------+\n",
-            "                                                                                         \n",
-            "+-----------------------------------------------------------------------------------------+\n",
-            "| Processes:                                                                              |\n",
-            "|  GPU   GI   CI        PID   Type   Process name                              GPU Memory |\n",
-            "|        ID   ID                                                               Usage      |\n",
-            "|=========================================================================================|\n",
-            "|  No running processes found                                                             |\n",
-            "+-----------------------------------------------------------------------------------------+\n"
+            "/bin/bash: line 1: nvidia-smi: command not found\n"
           ]
         }
       ],
